# rurtex

./: .gitignore  Cargo.toml  README.md  run.sh
.cargo/: config.toml
src/: error.rs  lib.rs  main.rs  message.rs
src/message/: broadcast.rs  echo.rs  generate.rs  mod.rs
